# admixmap

./: AUTHORS  INSTALL  Makefile.am  README  bootstrap  configure  configure.ac  configure.in
gslwrap-ch/: .cvsignore  INSTALL  Makefile.am  MatrixArray.cc  MatrixArray.h  MatrixArray_d.cc  MatrixArray_d.h  MatrixArray_i.cc  MatrixArray_i.h  WeffcppFilter.sh  bootstrap  configure.in  eclipse_make  generate  makefile  matrix.cc  matrix.h  matrix_d.cc  matrix_d.h  matrix_i.cc  matrix_i.h  matrix_source.cc  matrix_source.h  rand.h  rand_serial.cc  vector.cc  vector.h  vector_d.cc  vector_d.h  vector_i.cc  vector_i.h  vector_source.cc  vector_source.h
gslwrap-ch/config/: .cvsignore  ltmain.sh
gslwrap-ch/doc/tex/: docxx.sty
gslwrap-ch/lshtm/: Matrix  Vector
gslwrap-ch/lshtm/bits/: minmax.h
src/: Makefile.am  Makefile.in  TODO  configure.ac
src/admixmap/: AdmixFilenames.h  AdmixFreqs.cc  AdmixFreqs.h  AdmixIndividualCollection.cc  AdmixIndividualCollection.h  AdmixMapModel.cc  AdmixMapModel.h  AdmixOptions.cc  AdmixOptions.h  AdmixPedigree.cc  AdmixedIndividual.cc  AdmixedIndividual.h  AdmixmapGenotypeConverter.cc  AdmixmapGenotypeConverter.h  AdmixtureAssocTest.cc  AdmixtureAssocTest.h  AffectedsOnlyTest.cc  AffectedsOnlyTest.h  AlleleFreqs.cc  AlleleFreqs.h  AllelicAssocSubTest.cc  AllelicAssocSubTest.h  AllelicAssocTest.cc  AllelicAssocTest.h  AncestryAssocTest.cc  AncestryAssocTest.h  Annealer.cc  Annealer.h  Chromosome.cc  Chromosome.h  Comms.h  CompositeLocus.cc  CompositeLocus.h  CopyNumberAssocTest.cc  CopyNumberAssocTest.h  CorrelatedFreqs.cc  CorrelatedFreqs.h  DispersionFreqs.cc  DispersionFreqs.h  DispersionTest.cc  (+75 more)
src/admixmap/interfaces/: IChromosome.cc  IChromosome.h  ICompositeLocus.cc  ICompositeLocus.h  IFreqArray.cc  IFreqArray.h  IGenome.cc  IGenome.h  IHapMixFreqs.cc  IHapMixFreqs.h  IInputData.cc  IInputData.h  IOptions.cc  IOptions.h  Makefile.am  manual.make
src/base/: AdmixOptions.cc  AdmixtureAssocTest.cc  AdmixtureAssocTest.h  AdmixtureProportions.cc  AdmixtureProportions.h  AffectedsOnlyTest.h  AlleleArray.cc  AlleleArray.h  AlleleFreqParser.cc  AlleleFreqParser.h  AlleleFreqSampler.cc  AlleleFreqSampler.h  AlleleFreqs.cc  AlleleFreqs.h  AllelicAssocSubTest.cc  AllelicAssocSubTest.h  AllelicAssocTest.cc  AncestryVector.cc  AncestryVector.h  Annealer.cc  Annealer.h  Chromosome.cc  Chromosome.h  CodeTimer.cc  CodeTimer.h  CompositeLocus.cc  CompositeLocus.h  CopyNumberAssocTest.cc  CopyNumberAssocTest.h  DataValidError.cc  DataValidError.h  DebugMacros.h  EventLogger.cc  EventLogger.hh  Filenames.h  FreqArrays.h  GFileLexer.cc  GFileLexer.h  GPI.cc  GPI.h  (+80 more)
src/bayeslib/: Makefile.am  Makefile.manual  bootstrap  common.h  manual.make
src/bayeslib/regression/: LinearRegression.h  Makefile.am  Makefile.manual  Regression.h  manual.make
src/bayeslib/samplers/: DirichletParamSampler.cc  DirichletParamSampler.h  Gaussian.h  HamiltonianMonteCarlo.cc  Makefile.am  Makefile.manual  manual.make  rand.h
src/bayeslib/utils/: Array.hh  ColumnIter.h  DivideBy.h  Exceptions.h  GSLExceptions.h  LogWriter.cc  LogWriter.h  Makefile.am  Makefile.manual  ProbVector.cc  RObjectWriter.cc  SnapToZero.h  StringConvertor.cc  StringConvertor.h  StringSplitter.cc  functions.cc  makefile.manual  manual.make  misc.h  pvector.cc
src/bclib/: INSTALL  Makefile.am  Makefile.in  README.rtf  configure.ac
src/bclib/bclib/: AdaptiveRejection.h  Array.hh  CoxRegression.h  DataMatrix.h  DataReader.h  DelimitedBuf.h  DelimitedFileWriter.h  Delimitedostream.h  DirichletParamSampler.h  DispersionSampler.h  Exceptions.h  FileWriter.h  GSLErrorHandler.h  GSLExceptions.h  Gaussian.h  GaussianProposalMH.h  HamiltonianMonteCarlo.h  LinearRegression.h  LogWriter.h  LogisticRegression.h  Makefile.am  Makefile.in  ModeFinder.h  MuSampler.h  NRand.h  OptionReader.h  ProbVector.h  RObjectWriter.h  Regression.h  StepSizeTuner.h  StringConvertor.h  StringSplitter.h  TableWriter.h  bclib.h  common.h  (+8 more)
src/bcppcl/: INSTALL  Makefile.am  README.rtf  bayes.cc  configure.ac  manual.make
src/common/: DebugMacros.h  DivideBy.cc  Makefile.am  ZeroOrMore.h  manual.make  pvector.cc  pvector.h
src/doxygen/: Doxyfile.in  Makefile.am  Makefile.in  mainpage.dox
src/hapmixmap/: HapMixAllelicAssocTest.cc  HapMixAllelicAssocTest.h  HapMixFilenames.h  HapMixFreqs.cc  HapMixFreqs.h  HapMixGenome.cc  HapMixGenome.hh  HapMixGenotypeLoader.cc  HapMixGenotypeLoader.h  HapMixHMM.cc  HapMixHMM.hh  HapMixIndividual.cc  HapMixIndividual.h  HapMixIndividualCollection.cc  HapMixIndividualCollection.h  HapMixModel.cc  HapMixModel.h  HapMixOptions.cc  HapMixOptions.h  InputHapMixData.cc  InputHapMixData.h  Makefile.am  Makefile.in  MantelHaenszelTest.cc  MantelHaenszelTest.h  PopHapMix.cc  PopHapMix.h  configure.ac  hapmixmap.cc  manual.make
src/m4/: ac_check_cxx_features.m4  ac_cxx_enable_profile.m4  ac_cxx_flags_preset.m4  ac_cxx_mpi.m4  ac_enable_parallel.m4  ac_env.m4  ac_info.m4  ac_sprng.m4  ax_cxx_compile_stdcxx_0x.m4
src/scripts/: Makefile.am  Makefile.in  README  build-common  build-coreduo  build-devel  build-open64  build-openmp  build-parallel-walton  build-parallel-walton-gcc4  build-pentium-4  build-profile  build-serial-walton  build-x86_64  env-prepare  genepi-config.in  gsl.m4
src/test/: CompositeLocusTest.cc  CompositeLocusTest.h  HapMixIndividualTest.cc  HapMixIndividualTest.h  IndividualTest.cc  IndividualTest.h  LegendData.h  LegendTest.cpp  LegendTest.h  Makefile.am  README  UserDataLocusTest.cc  UserDataLocusTest.h  run-tests.cc
src/tools/: DataFormatter.cc  DataFormatter.h  FormatPhasedHapMapData.cpp  HapmixmapDataFormatter.cc  HapmixmapDataFormatter.h  Legend.cc  Legend.cpp  Legend.h  Makefile.am  Makefile.in  UserData.cc  UserData.h  UserDataIndividual.cc  UserDataIndividual.h  UserDataLocus.cc  UserDataLocus.h  convertdata.cc  convertphaseddata.cc  ge-build-snp-list  ge-fetch-legend  ge-snp-lookup.cc  ge-snp-lookup.h  ge-user2hmx.1  itoa.h  phased2g.cc  ps2bluewhite.bat  ps2bluewhite.sh  ps2pdf.bat  ps2pdf.sh  rs-lookup.cpp  rs_lookup.cpp  userdata-lexer.ll  userdata-parser.yy
(+872 files in other folders)
